<resources>
<string name="app_name">数据库测试</string>
<string name="Create_DB">创建数据库</string>
<string name="Delete_DB">删除数据库</string>
<string name="Upgrade_DB">更新数据库</string>
<string name="Insert_Data">插入数据</string>
<string name="Modify_Data">修改数据</string>
<string name="Query_Data">查询数据</string>
<string name="Delete_Data">删除数据</string>
<string name="Operation_details">操作明细</string>
<string name="Data_Details">数据明细</string>
</resources>
